new files added

--- a/oauth2/src/main/resources/application.properties
+++ b/oauth2/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#github
+spring.security.oauth2.client.registration.github.client-id=b5c71b201d37c07d279c
+spring.security.oauth2.client.registration.github.client-secret=1267ccafb9f002bd5a522c1a56a58238eb48f5f6
 
+#google
+spring.security.oauth2.client.registration.google.client-id=1034336219174-ur5m4fccca8n0k0s18mect7bqgd0sshe.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
+
+logging.level.org.springframework.securit=TRACE
